crates/reinhardt-grpc/macros/tests/ui/inject/fail/wrong_cache_type.stderr
error: `cache` option expects a boolean value (e.g., `cache = false`)
  --> tests/ui/inject/fail/wrong_cache_type.rs:12:19
   |
12 |     #[inject(cache = "yes")] service: String,
   |                      ^^^^^
